Change mobile padding

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -418,10 +418,11 @@ iframe {
 		}
 		.pageDiv {
 			float: right;
-			padding: 1%;
+			padding-left: 2%;
+			padding-right: 2%;
 			width: 70%;
 			margin: auto;
-			margin-right: -2%;
+			margin-right: -4%;
 		}
 		.project {
 			display: block;
