Change mobile padding

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -407,6 +407,7 @@ iframe {
 			float: left;
 			width: 20%;
 			padding: 5%;
+			padding-left: 3%;
 			text-align: left;
 			position: fixed;;
 			top: 30vh;
