--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -344,7 +344,8 @@ iframe {
 		letter-spacing: 0.1rem;
 	}
 	.resumeDownload {
-		margin-left: 30%;
+		margin-left: 5%;
+		margin-bottom: 4%;
 		font-size: 1.2rem;
 		font-family: $font-stack2;
 	}
