Adjust alignment of resume download

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -385,6 +385,9 @@ iframe {
 			margin: auto;
 			margin-left: -0.6%;
 		}
+		.resume {
+			padding: 8%;
+		}
 		.project {
 			display: block;
 			margin: auto;
