Adjust alignment of resume download

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -386,7 +386,9 @@ iframe {
 			margin-left: -0.6%;
 		}
 		.resume {
-			padding: 8%;
+			margin: auto;
+			padding: 6%;
+			width: 80%;
 		}
 		.project {
 			display: block;
