Add google verification tag

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
    	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:300,400,600,700&amp;lang=en" />
    	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&amp;lang=en" />
    	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Dorsa:300,400,600,700&amp;lang=en" />
-    
+
+   	<meta name="google-site-verification" content="CrpAoQGEjupJG-3DVLlmOlMfnSB1aupcm1clVZm1DNQ" />  
   </head>
 
   <body>
