--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -4,7 +4,7 @@
 		<div id='portfolio'> 
 			<div class='project musicDusk'>
 				<div class='musicProject'>
-					<span data-modal='music4Modal' class='projBtn'>nemo</span>
+					<span data-modal='music4Modal' class='projBtn'>dusk</span>
 				</div>
 			</div>
 			<div class='project musicMagicianBag'>
