--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -417,6 +417,16 @@ iframe {
 		}
 }
 
+//mobile 
+@media handheld, screen and (max-width: 500px) {
+		.nav p {
+			font-size: 1.1rem;
+		}
+}
+
+
+
+
 // //mobile 
 // @media handheld, screen and (max-width: 500px) {
 // 		.nav {
