Fix typos; Update sea gypsies iframe link

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 	<p class='aboutTxt'>
 	<%= image_tag('/images/synth.gif', :class => 'aboutSynth') %><br>
-	lisa devon is a san francisco based sound designer and engineer.<br>
+	lisa devon is a san francisco based sound designer & engineer.<br>
 	she specializes in sound for film, branded spots, & other visual media.<br>
 	she also composes music & has a huge affinity for synthesizers.</p>
 
