--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -2,7 +2,7 @@
 <span class='festivals'>bamff film festival / VIMFF</span><br>
 <span class='projRole'>role: re-recording mix</span><br><br>
 
-<iframe src="//www.youtube.com/embed/k3rJiDN7cao" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/127306388" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <br><br>
 <span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
