--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   	<div class='left nav'>
 		<p><%= link_to "home", home_path %></p>
 		<p><%= link_to "film", film_path %></p>
-		<p><%= link_to "design", post_path %></p>
+		<p><%= link_to "design", design_path %></p>
 		<p><%= link_to "music", music_path %></p>
 		<p><%= link_to "resume", resume_path %></p>
 		<p><%= link_to "connect", connect_path %></p>
