--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -190,6 +190,15 @@ iframe {
 	.designCisco {
 		background-image: url('/projectImgs/cisco.jpg');
 	}
+	.designSquare {
+		background-image: url('/projectImgs/square.jpg');
+	}
+	.designDodo {
+		background-image: url('/projectImgs/dodo.jpg');
+	}
+	.designAudi {
+		background-image: url('/projectImgs/audi.jpg');
+	}
 	.designQueensway {
 		background-image: url('/projectImgs/queensway.jpg');
 	}
@@ -429,52 +438,3 @@ iframe {
  		  	padding: 2%;
  		}
 }
-
-
-
-
-// //mobile 
-// @media handheld, screen and (max-width: 500px) {
-// 		.nav {
-// 			float: left;
-// 			width: 20%;
-// 			padding: 5%;
-// 			padding-left: 3%;
-// 			text-align: left;
-// 			position: fixed;;
-// 			top: 30vh;
-// 		  	background-color: rgb(0,0,0); /* Fallback color */
-// 		  	background-color: rgba(0,0,0,0.03); /* Black w/ opacity */
-// 		}
-// 		.nav p {
-// 			font-size: 150%;
-// 		}
-// 		.pageDiv {
-// 			float: right;
-// 			padding-left: 2%;
-// 			padding-right: 2%;
-// 			width: 70%;
-// 			margin: auto;
-// 			margin-right: -4%;
-// 		}
-// 		.project {
-// 			display: block;
-// 			margin: auto;
-// 			width: 100%;
-// 			height: 100%;
-// 		}
-// 		.designProject, .musicProject, .filmProject {
-// 			font-size: 250%;
-// 		}
-// 		.connect {
-// 			text-align: center;
-// 			padding-top: 16%; 
-// 		}
-// 		.about {
-// 			margin-top: -10%;
-// 			text-align: left;
-// 		}
-// 		.aboutTxt {
-// 			margin-left: 0%;
-// 		}
-// }
