--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,5 +1,7 @@
 <div class='pageDiv connect'>
 
+	<%= image_tag '/images/lisaDrawing.png', class: 'lisaDrawing' %>
+	
 	<p class='emailInfo'>e-mail me:
 	<%= mail_to "lisa@lisasound.com" do %>
   		<span class='email'>lisa@lisasound.com</span>
