Add drawing to connect page

--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -1,6 +1,6 @@
 <div class='pageDiv connect'>
 
-	<%= image_tag 'lisaDrawing.png', class: 'lisaDrawing' %>
+	<%= image_tag('lisaDrawing.png', class: 'lisaDrawing') %>
 	
 	<p class='emailInfo'>e-mail me:
 	<%= mail_to "lisa@lisasound.com" do %>
