--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -149,7 +149,7 @@ iframe {
 	  -webkit-filter: grayscale(100%);
 		filter: grayscale(100%);
 	}
-	.lisadrawing {
+	.lisaDrawing {
 		width: 50%;
 		min-width: 300px;
 		text-align: center;
