Adjust nav bar position

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,16 +33,13 @@
 		</div>
 	</div>
 
-  	<div class='left nav'>
-		<p><%= link_to "home", home_path %></p>
-		<p><%= link_to "film", film_path %></p>
-		<p><%= link_to "design", design_path %></p>
-		<p><%= link_to "music", music_path %></p>
-		<p><%= link_to "resume", resume_path %></p>
+  	<div class='nav'>
+		<p><%= link_to "home", home_path %></p> /
+		<p><%= link_to "film", film_path %></p> /
+		<p><%= link_to "design", design_path %></p> /
+		<p><%= link_to "music", music_path %></p> /
+		<p><%= link_to "resume", resume_path %></p> /
 		<p><%= link_to "connect", connect_path %></p>
-	</div>
-
-	<div class='right partialContent'>
 	</div>
 
     <%= yield %>
