--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -9,16 +9,6 @@ $color-blue: #093aa3;
 $color-charcol: #191919;
 
 
-.construction {
-	font-family: $font-stack4;
-	letter-spacing: 1.3rem;
-	text-align: center;
-	font-size: 5vw;
-	color: #396cd3;
-}
-
-
-
 //pages
 body {
 	margin: 2%;
@@ -70,14 +60,17 @@ iframe {
 	}
 
 
-.nav {
-	float: left;
-	position: fixed;
-	width: 10%;
-	margin: 4%;
-	top: 20vh;
-}
+ .nav {
+ 	margin: auto;
+   	background-color: rgb(0,0,0); /* Fallback color */
+   	background-color: rgba(0,0,0,0.03); /* Black w/ opacity */
+   	padding: 2%;
+   	text-align: center;
+   	font-size: 1.5rem;
+   	word-spacing: 0.9rem;
+ }
 	.nav p {
+		display: inline-block;
 		font-size: 1.1rem;
 		font-family: $font-stack2;
 		font-weight: 200;
@@ -87,12 +80,11 @@ iframe {
 		font-style: italic;
 	}
 
-
 .pageDiv {
-	float: right;
-	width: 82%;
+	// text-align: center;
+	margin: auto;
+	width: 96%;
 	padding-top: 2%;
-	margin-right: 4%;
 }
 
 
@@ -107,7 +99,6 @@ iframe {
 		font-family: $font-stack1;
 		letter-spacing: .05rem;
 		text-align: center;
-		margin-left: -20%;
 	}
 	.aboutSynth {
 		width: 20%;
@@ -211,6 +202,9 @@ iframe {
 
 
 //design, film, music 
+	.filmDiv, .musicDiv, .designDiv {
+		text-align: center;
+	}
 	.project {
 		background-size: cover;
    		background-repeat:   no-repeat;
@@ -432,15 +426,10 @@ iframe {
 		}
 }
 
+
 //mobile 
 @media handheld, screen and (max-width: 500px) {
 		.nav p {
 			font-size: 0.9rem;
 		}
- 		.nav {
- 			margin: auto;
- 		  	background-color: rgb(0,0,0); /* Fallback color */
- 		  	background-color: rgba(0,0,0,0.03); /* Black w/ opacity */
- 		  	padding: 2%;
- 		}
 }
