Change name banner img; Add facebook tooltip to about

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,7 @@
 
   	<div class='titleBanner'>
 		<div class='titleName'>
-			<%= image_tag('/images/bannerName.png', :class => 'titleBannerImg') %>
-		</div>
-		<div class='titleDescription'>
-			sound design <span class='titleSpacer'>/</span> 
-			mix <span class='titleSpacer'>/</span> 
-			foley <span class='titleSpacer'>/</span> 
-			edit <span class='titleSpacer'>/</span> 
-			compose
+			<%= image_tag('/images/testname.png', :class => 'titleBannerImg') %>
 		</div>
 	</div>
 
