--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -36,7 +36,7 @@ iframe {
 
 .titleBanner {
 	text-align: center;
-	margin-bottom: 4%;
+	margin-bottom: 2%;
 }
 	.titleBanner .titleName {
 		// font-size: 3.5rem;
@@ -105,6 +105,22 @@ iframe {
 		min-width: 150px;
 	}
 
+	.tooltip {
+	  display: none;
+	  position: absolute;
+	  width: 100px;
+	  height: 100px;
+	  border-radius: 15px 50px;
+	  background-image: url('/images/lisa-img.jpg');
+	  background-size: cover;
+	  background-repeat:   no-repeat;
+	  background-position: center center;
+	}
+	    .masterTooltip {
+	      text-decoration: none;
+	      color: inherit;
+	    }
+	
 
 //connect
 	.connect {
