--- a/app/views/pages/connect.html.erb
+++ b/app/views/pages/connect.html.erb
@@ -14,4 +14,6 @@
 		<a href="https://www.facebook.com/lisa.devon.7"><%= image_tag 'facebook.png', class: 'icon' %></a>
 	</div>
 
+	<div class='site-credit'><%= link_to 'site created by sierra', '//www.sierramclawhorn.com', target: "_blank", class: 'site-credit' %></div>
+
 </div>
