--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -5,17 +5,17 @@ $font-stack4: 'Dorsa', sans-serif;
 $font-stack5: 'Open Sans', serif;
 $font-stack6: 'Josefin Sans', sans-serif;
 
-$color-blue: #093aa3;
-$color-charcol: #191919;
+$color-purple: #aab0ff;
+$color-charcol: #3c28d3;
 
 $bg-color1: #595EA9;
 $bg-color2: #C6C9FE;
 $bg-color3: #444CB1;
 
 
-
 //pages
 body {
+	color: white;
 	margin: 0;
 	background-color: $bg-color3;
 	padding-bottom: 110px;
@@ -30,7 +30,7 @@ a {
 		color: $color-charcol;
 	}
 	a:hover {
-		color: $color-blue;
+		color: $color-purple;
 	}
 
 
@@ -69,6 +69,7 @@ iframe {
 
 
  .nav {
+ 	color: black;
  	margin: auto;
    	background-color: $bg-color2;
    	padding: 2%;
@@ -169,7 +170,7 @@ iframe {
 		font-weight: 200;
 	}
 	.connect .email {
-		color: $color-blue;
+		color: $color-purple;
 		font-weight: 500;
 		letter-spacing: .2rem;
 		padding-left: 2%;
@@ -415,7 +416,7 @@ iframe {
 		font-family: $font-stack2;
 	}
 	.resumeDownloadLink {
-		color: $color-blue;
+		color: $color-purple;
 		letter-spacing: 0.1rem;
 		font-weight: 200;
 	}
