Add tooltip to credit footer

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -144,10 +144,10 @@ iframe {
 	.tooltip {
 	  display: none;
 	  position: absolute;
-	  width: 100px;
-	  height: 100px;
+	  width: 80px;
+	  height: 80px;
 	  border-radius: 15px 50px;
-	  background-image: url('/images/lisa-img.jpg');
+	  background-image: url('/images/sierra-img.jpg');
 	  background-size: cover;
 	  background-repeat:   no-repeat;
 	  background-position: center center;
