--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <div class='footer'>
     <div class='pagedivider1'></div>
     
-    <div class='site-credit'><%= link_to 'site created by sierra', '//www.sierramclawhorn.com', target: "_blank", class: 'site-credit' %></div>
+    <div class='site-credit'><a href="//www.sierramclawhorn.com" title="" class="masterTooltip" id="tooltip-sierra">site created by sierra</a></div>
   </div>
 
   </body>
