--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 	<p class='aboutTxt'>
 	<%= image_tag('/images/synth.gif', :class => 'aboutSynth') %><br>
-	<a href="//www.facebook.com/lisa.devon.7" title="" class="masterTooltip" id="tooltip-lisa">lisa devon</a> is a san francisco based sound designer & engineer.<br>
+	lisa devon is a san francisco based sound designer & engineer.<br>
 	she specializes in sound for film, branded spots, & other visual media.<br>
 	she also composes music & has a huge affinity for synthesizers.</p>
 
