--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -18,7 +18,7 @@ body {
 	color: white;
 	margin: 0;
 	background-color: $bg-color3;
-	padding-bottom: 110px;
+	padding-bottom: 95px;
 }
 
 a {
@@ -54,9 +54,9 @@ iframe {
 	}
 	.titleBannerImg {
 		text-align: center;
-		width: 40%;
+		width: 50%;
 		padding-bottom: 2%;
-		padding-top: 2%;
+		padding-top: 3%;
 		margin: -2%;
 	}
 	.titleBanner .titleDescription {
@@ -99,7 +99,7 @@ iframe {
 	position: fixed;
     bottom: 0;
     width: 100%;
-    min-height: 100px;
+    min-height: 80px;
     background-color: $bg-color1;
 }
 	.site-credit {
@@ -111,7 +111,7 @@ iframe {
 		color: $bg-color2;
 		font-weight: 200;
 		letter-spacing: 0.3rem;
-		font-size: 0.8rem;
+		font-size: 0.7rem;
 	}
 	.site-credit a:hover {
 		font-style: italic;
@@ -119,7 +119,7 @@ iframe {
 
 .pagedivider1,
 .pagedivider2 {
-	height: 10px;
+	height: 8px;
 	background-color: white;
 }
 
@@ -144,8 +144,8 @@ iframe {
 	.tooltip {
 	  display: none;
 	  position: absolute;
-	  width: 80px;
-	  height: 80px;
+	  width: 75px;
+	  height: 75px;
 	  border-radius: 15px 50px;
 	  background-image: url('/images/sierra-img.jpg');
 	  background-size: cover;
@@ -194,10 +194,13 @@ iframe {
 	}
 	.lisaDrawing {
 		width: 50%;
-		background-color: white;
+		background-color: #f4f5ff;
 		min-width: 300px;
 		text-align: center;
-		box-shadow: 0px 30px 40px rgba(0,0,0,.1);
+		border-radius: 50px;
+		-moz-box-shadow: 0 0 10px #fff;
+        -webkit-box-shadow: 0 0 10px #fff;
+        box-shadow: 0px 0px 10px #fff;
 	}
 
 
@@ -436,14 +439,14 @@ iframe {
 			width: 100%;
 			text-align: center;
 			position: initial;
-			margin: 1%;
+			padding: 1%;
 		}
 		.nav p {
 			display: inline;
 			font-size: 1.2rem;
 			word-spacing: 2rem;
-			margin-right: 2%;
-			margin-left: 2%
+			padding-right: 2%;
+			padding-left: 2%
 		}
 		.pageDiv {
 			float: none;
@@ -484,6 +487,6 @@ iframe {
 //mobile 
 @media handheld, screen and (max-width: 500px) {
 		.nav p {
-			font-size: 0.9rem;
+			font-size: 1rem;
 		}
 }
