--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -533,6 +533,16 @@ iframe {
 
 //mobile 
 @media handheld, screen and (max-width: 500px) {
+		.pageDiv {
+			width: 90%;
+			margin: auto;
+			padding-top: 5%;
+			padding-bottom: 3%;
+		}
+
+		.about {
+			margin-top: -8%;
+		}
 		.nav p {
 			font-size: 1rem;
 		}
