--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -57,7 +57,7 @@ iframe {
 .titleBanner {
 	text-align: center;
 	padding-bottom: 2%;
-	background-color: #0074db;
+	background-color: #090d84;
 }
 	.titleBanner .titleName {
 		// font-size: 3.5rem;
@@ -565,6 +565,13 @@ iframe {
 			width: 80%;
 		}
 		.footer {
-    		min-height: 50px;
+    		min-height: 10px;
     	}
+    			.site-credit {
+				padding-top: 1%;
+		
+			}
+			.site-credit a {
+				font-size: 0.5rem;
+			}
 }
