--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,7 +56,7 @@ iframe {
 
 .titleBanner {
 	text-align: center;
-	padding-bottom: 2%;
+	padding-bottom: 1%;
 	background-color: #090d84;
 }
 	.titleBanner .titleName {
@@ -67,7 +67,7 @@ iframe {
 	}
 	.titleBannerImg {
 		text-align: center;
-		width: 50%;
+		width: 66%;
 		padding-bottom: 2%;
 		padding-top: 3%;
 		margin: -2%;
@@ -263,10 +263,11 @@ iframe {
 	}
 	.lisaDrawing {
 		width: 50%;
-		background-color: #f4f5ff;
+		background-color: #402f8c;
+		opacity: 0.8;
 		min-width: 300px;
 		text-align: center;
-		border-radius: 50px;
+		border-radius: 40%;
 		-moz-box-shadow: 0 0 10px #fff;
         -webkit-box-shadow: 0 0 10px #fff;
         box-shadow: 0px 0px 10px #fff;
