Add 'if no js script' warning

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
    	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Dorsa:300,400,600,700&amp;lang=en" />
 
    	<meta name="google-site-verification" content="CrpAoQGEjupJG-3DVLlmOlMfnSB1aupcm1clVZm1DNQ" />  
+
+    <noscript>
+      <h1>Your browser does not support JavaScript, which may affect the way this site works</h1>
+    </noscript>
   </head>
 
   <body>
