--- a/app/views/pages/_film_AmericanParadise.html.erb
+++ b/app/views/pages/_film_AmericanParadise.html.erb
@@ -1,6 +1,6 @@
 <span class='projTitle'>american paradise</span><br>
 <span class='festivals'>sundace film festival / SXSW</span><br>
-<span class='projRole'>role: re-recording mix</span><br><br>
+<span class='projRole'>role: sound design & re-recording mix</span><br><br>
 
 <iframe src="//player.vimeo.com/video/199619694" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
