--- a/app/views/pages/_film_SeaGypsies.html.erb
+++ b/app/views/pages/_film_SeaGypsies.html.erb
@@ -1,6 +1,6 @@
 <span class='projTitle'>sea gypsies: the far side of the world</span><br>
 <span class='festivals'>bamff film festival / VIMFF</span><br>
-<span class='projRole'>role: re-recording mix</span><br><br>
+<span class='projRole'>role: sound design & re-recording mix</span><br><br>
 
 <iframe src="https://player.vimeo.com/video/127306388" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
