--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -7,9 +7,10 @@
 	<H2>skills</H2>
 		<H5>
 			<span class='skill'>pro tools hd</span> <span class='skillBreak'>|</span> 
-			<span class='skill'>avid d-command</span> <span class='skillBreak'>|</span> 
 			<span class='skill'>ableton live</span> <span class='skillBreak'>|</span> 
-			<span class='skill'>logic pro</span>
+			<span class='skill'>logic pro</span> <span class='skillBreak'>|</span>
+			<span class='skill'>SSL duality</span> <span class='skillBreak'>|</span>
+			<span class='skill'>avid D command</span>
 		</H5>
 	<H2>experience</H2> 
 		<H3>disher music & sound — <span class='jobRole'>audio engineer</span></H3>
