--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -30,7 +30,7 @@ body {
 	border-right: 1px dotted white;
 	color: white;
 	margin: 0;
-	background-color: $bg-color5;
+	background-color: black;
 	padding-bottom: 95px;
 }
 
@@ -57,7 +57,7 @@ iframe {
 .titleBanner {
 	text-align: center;
 	padding-bottom: 1%;
-	background-color: #090d84;
+	background-color: black;
 }
 	.titleBanner .titleName {
 		// font-size: 3.5rem;
@@ -84,7 +84,7 @@ iframe {
  .nav {
  	color: $bg-color14;
  	margin: auto;
-   	background-color: #b8bdf9;
+   	background-color: #baaff7;
    	padding: 2%;
    	text-align: center;
    	font-size: 1.5rem;
@@ -112,7 +112,7 @@ iframe {
     bottom: 0;
     width: 100%;
     min-height: 25px;
-    background-color: #090d84;
+    background-color: #0a005b;
 }
 	.site-credit {
 		text-align: center;
