Resume capitalization change

--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -6,7 +6,7 @@
 
 	<H2>skills</H2>
 		<H5>
-			<span class='skill'>pro tools hd</span> <span class='skillBreak'>|</span> 
+			<span class='skill'>pro tools HD</span> <span class='skillBreak'>|</span> 
 			<span class='skill'>ableton live</span> <span class='skillBreak'>|</span> 
 			<span class='skill'>logic pro</span> <span class='skillBreak'>|</span>
 			<span class='skill'>SSL duality</span> <span class='skillBreak'>|</span>
