Revert body color

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -30,7 +30,7 @@ body {
 	border-right: 1px dotted white;
 	color: white;
 	margin: 0;
-	background-color: black;
+	background-color: $bg-color5;
 	padding-bottom: 95px;
 }
 
@@ -84,7 +84,7 @@ iframe {
  .nav {
  	color: $bg-color14;
  	margin: auto;
-   	background-color: #baaff7;
+   	background-color: #b8bdf9;
    	padding: 2%;
    	text-align: center;
    	font-size: 1.5rem;
