Update banner img; Update vimeo link to american paradise

--- a/app/views/pages/_film_AmericanParadise.html.erb
+++ b/app/views/pages/_film_AmericanParadise.html.erb
@@ -2,7 +2,7 @@
 <span class='festivals'>sundace film festival / SXSW</span><br>
 <span class='projRole'>role: sound design & re-recording mix</span><br><br>
 
-<iframe src="//player.vimeo.com/video/199619694" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="//player.vimeo.com/video/199623840?color=f6f8f9" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <br><br>
 <span class='disclaimer'>mixed at <%= link_to 'Disher Music & Sound', "//www.dishermusic.com/#about", :target => "_blank" %></span>
