--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -124,9 +124,11 @@ iframe {
 		font-weight: 200;
 		letter-spacing: 0.3rem;
 		font-size: 0.7rem;
+		color: #0a005b;
 	}
 	.site-credit a:hover {
 		font-style: italic;
+		color: white;
 	}
 
 .pagedivider1,
