commit from desktop3

--- a/app/views/pages/music.html.erb
+++ b/app/views/pages/music.html.erb
@@ -29,6 +29,13 @@
 		<div id='music4Modal' class='projModal'>
 		 	<div class='projModalContent'>
 		 		<span class='projClose'>&times;</span>
+		    	<%= render partial: 'music5', layout: false %>
+		  	</div>
+		</div>
+
+		<div id='music4Modal' class='projModal'>
+		 	<div class='projModalContent'>
+		 		<span class='projClose'>&times;</span>
 		    	<%= render partial: 'music4', layout: false %>
 		  	</div>
 		</div>
